--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,7 +21,8 @@ main{
     width: 100vw;
     height: 100vh;
     background-color: #8c8ceb;
-    
+    transition: width 0.3s, heigth 0.3s;
+    transition-timing-function: ease;
     
     
     
