--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,7 +20,7 @@ html, body{
 main{
     width: 100vw;
     height: 100vh;
-    background-color: #8c8ceb;
+    background-color: #abc47c00;
     transition: width 0.3s, heigth 0.3s;
     transition-timing-function: ease;
     
@@ -36,20 +36,21 @@ nav{
 
 nav > div > img{
     height: 300px;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.596);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.342);
 }
 
 nav span{
     font-family: 'Raleway', sans-serif;
     font-size: 1.8em;
-   color: #112847;
-   font-weight: bolder;
+    color: #2B331D;
+    font-weight: bolder;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.342) ;
 }
 
 nav > div#sobremim > p{
     text-align: justify;
     margin: 10px 10px;
-    color: rgb(0, 0, 0);
+    color: #2b331dbd;
     font-weight: bold;
     
     
@@ -75,7 +76,7 @@ section ul > li > a{
     text-decoration: none;
     color: black;
     padding: 10px;
-    background-color: aqua;
+    background-color:#575E49 ;
     border-radius: 20px;
 }
 
@@ -99,18 +100,24 @@ section ul > li > a.link3:hover{
 }
 
 aside{
+    background-color: #C6F76A;
     margin-top: 20px;
+    height: 120px;
+    border-radius: 10px;
+    margin: 20px 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.479);
     
 }
 
 nav h2 > a{
     display: block;
-    background-image: linear-gradient(to right,#7f7feb, black);
+    background-image: linear-gradient(to right,#ABC47C, #2B331D);
     color: wheat;
 }
 
 aside > table{
-    width: 100vw;
+    width: 80vw;
+    margin: auto;
     
     border-collapse: collapse;
 }
@@ -124,7 +131,17 @@ table th,td{
     text-align: center;
 }
 
+table tr.amarelo{
+    background-color: yellow;
+}
 
+table tr.laranja{
+    background-color: orange;
+}
+
+table tr.azul{
+    background-color: rgb(43, 43, 241);
+}
 
 
 
